-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.2
-
-
7fa28f98824a94396106eadfc028b329985a0cfc (qt/qtdeclarative/dev)
I need to send multiple arguments from cpp to qml with signal. I have a qmlRegisterType class which named "myqmlobject". When I emit mysignal with 2 arguments like
emit mysignal(myString, myInteger);
I can handle this signal with
Connections {
target: myObject
function onMysignal(myString, myInteger)
{
console.log("it works");
}
}
this qml codes.
But when I try to send 3 or more arguments with signal application crashes.
I send basic example application which reproduce this crash.
| For Gerrit Dashboard: QTBUG-94360 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 353391,3 | qv4function: Fix crash due to reference being invalidated | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |